2021-06-11  Robert Jenner  <jenner@apple.com>

        N[LayoutTests] Delete unused LayoutTests/media resources
        https://bugs.webkit.org/show_bug.cgi?id=226836

        Reviewed by Jonathan Bedard.

        * media/track/opera/resources/media/sunflower.mp4: Removed.
        * media/track/opera/resources/media/sunflower.webm: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/js resources
        https://bugs.webkit.org/show_bug.cgi?id=226796

        Reviewed by Jonathan Bedard.

        * js/dom/modules/resources/module-will-fire-beforeload.js: Removed.
        * js/kde/resources/KNOWN_FAILURES: Removed.
        * js/mozilla/resources/js-test-post-async.js: Removed.
        * js/mozilla/resources/js-test-post-function.js: Removed.
        * js/mozilla/resources/js-test-post-n.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/css3 resources
        https://bugs.webkit.org/show_bug.cgi?id=226827

        Reviewed by Jonathan Bedard.

        * css3/masking/resources/clip.svg: Removed.
        * css3/resources/FeatureTest.ttf: Removed.

2021-06-11  Truitt Savell  <tsavell@apple.com>

        imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/active-processing.https.html  is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=226942

        Unreviewed test gardening.

        * TestExpectations:

2021-06-11  Patrick Angle  <pangle@apple.com>

        Web Inspector: Add instrumentation to node destruction for InspectorDOMAgent
        https://bugs.webkit.org/show_bug.cgi?id=226624

        Reviewed by Devin Rousso.

        * inspector/dom/willDestroyDOMNode-expected.txt: Added.
        * inspector/dom/willDestroyDOMNode.html: Added.

2021-06-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        [Live Text] Text selection inside image elements should not be cleared upon resize