@@ -1,5 +1,14 @@
 2021-06-11  Robert Jenner  <jenner@apple.com>
 
+        [LayoutTests] Delete unused LayoutTests/security resources
+        https://bugs.webkit.org/show_bug.cgi?id=226839
+
+        Reviewed by Jonathan Bedard.
+
+        * security/resources/worker-isSecureContext-disabled.js: Removed.
+
+2021-06-11  Robert Jenner  <jenner@apple.com>
+
         N[LayoutTests] Delete unused LayoutTests/media resources
         https://bugs.webkit.org/show_bug.cgi?id=226836
 
